Created the site name block in the header and switched the header and the slider they places

--- a/web/themes/custom/fasu_theme/src/scss/style.scss
+++ b/web/themes/custom/fasu_theme/src/scss/style.scss
@@ -66,3 +66,13 @@
 .region-footer-secondary {
   padding: 0 1rem;
 }
+
+.body--dxpr-theme-nav-mobile {
+  .wrap-branding {
+    height: var(--dxt-setting-header-mobile-height);
+  }
+}
+
+#block-fasu-theme-nazvasaytu {
+  margin: 0 10px;
+}
