--- a/web/themes/custom/fasu_theme/css/style.css
+++ b/web/themes/custom/fasu_theme/css/style.css
@@ -62,4 +62,12 @@
   padding: 0 1rem;
 }
 
+.body--dxpr-theme-nav-mobile .wrap-branding {
+  height: var(--dxt-setting-header-mobile-height);
+}
+
+#block-fasu-theme-nazvasaytu {
+  margin: 0 10px;
+}
+
 /*# sourceMappingURL=style.css.map */
