Changed the header display

--- a/web/themes/custom/fasu_theme/css/style.css
+++ b/web/themes/custom/fasu_theme/css/style.css
@@ -71,18 +71,31 @@
 }
 
 .site-name-block > span {
-  font-size: 24px;
+  font-size: 32px;
+}
+@media screen and (width > 385) and (width <= 670px) {
+  .site-name-block > span {
+    font-size: 24px;
+  }
+}
+@media screen and (width <= 385px) {
+  .site-name-block > span {
+    font-size: 16px;
+  }
 }
 
-.region-navigation-collapsible {
+.navbar-header-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.navbar-header-wrapper .region-navigation-collapsible {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-start;
-  flex-wrap: nowrap;
+  justify-content: space-between;
   align-items: center;
 }
 @media screen and (width <= 820px) {
-  .region-navigation-collapsible {
+  .navbar-header-wrapper .region-navigation-collapsible {
     flex-direction: column;
     flex-wrap: unset;
     align-items: unset;
@@ -104,6 +117,11 @@
   }
   .d-full-inline {
     display: inline;
+  }
+}
+@media screen and (width <= 820px) {
+  #dxpr-theme-main-menu {
+    margin-top: var(--dxt-setting-header-mobile-height);
   }
 }
 
