--- a/web/themes/custom/fasu_theme/templates/layout/page.html.twig
+++ b/web/themes/custom/fasu_theme/templates/layout/page.html.twig
@@ -114,7 +114,7 @@
         {% if not theme.settings.full_width_containers.cnt_header_nav%}
           <div class="row container-row"><div class="col-sm-12 container-col navbar-header-wrapper">
         {% endif %}
-        <div class="navbar-header d-flex align-items-center justify-content-center">
+        <div class="navbar-header d-flex align-items-center">
           {{ page.navigation }}
           {# .btn-navbar is used as the toggle for collapsed navbar content #}
           {% if page.navigation_collapsible %}
