--- a/web/themes/custom/fasu_theme/templates/view/views-view--frontpage.html.twig
+++ b/web/themes/custom/fasu_theme/templates/view/views-view--frontpage.html.twig
@@ -62,8 +62,8 @@
   {% endif %}
 
   {% if rows %}
-    <div class="view-content container">
-      <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="view-content container px-3 px-md-0">
+      <div class="row federations-grid g-0">
         {{ rows }}
       </div>
     </div>
