--- a/web/themes/custom/fasu_theme/css/style.css
+++ b/web/themes/custom/fasu_theme/css/style.css
@@ -73,12 +73,12 @@
 .site-name-block > span {
   font-size: 32px;
 }
-@media screen and (width > 385) and (width <= 670px) {
+@media screen and (675px < width) and (width <= 960px) {
   .site-name-block > span {
     font-size: 24px;
   }
 }
-@media screen and (width <= 385px) {
+@media screen and (width <= 675px) {
   .site-name-block > span {
     font-size: 16px;
   }
@@ -122,6 +122,37 @@
 @media screen and (width <= 820px) {
   #dxpr-theme-main-menu {
     margin-top: var(--dxt-setting-header-mobile-height);
+  }
+}
+.federations-grid {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  column-gap: 1.5rem;
+}
+.federations-grid > .federation-item {
+  display: contents;
+}
+.federations-grid .federation-media {
+  grid-column: 1;
+}
+.federations-grid .federation-content {
+  grid-column: 2;
+}
+.federations-grid .federation-divider {
+  grid-column: 1/-1;
+}
+.federations-grid > .federation-item:last-child .federation-divider {
+  display: none;
+}
+@media (max-width: 575.98px) {
+  .federations-grid {
+    grid-template-columns: 1fr;
+    column-gap: 0;
+  }
+  .federations-grid .federation-media,
+  .federations-grid .federation-content,
+  .federations-grid .federation-divider {
+    grid-column: 1;
   }
 }
 
