--- a/web/modules/contrib/media_library_translate/css/media_library_translate.admin.css
+++ b/web/modules/contrib/media_library_translate/css/media_library_translate.admin.css
@@ -1,10 +1,9 @@
-
-.media-library-translate__link {
+.media-library-translate__link{
   position: absolute;
-  top: .85rem;
-  right: 5.625rem;
-  width: 2rem;
-  height: 2rem;
+  top: 0.625rem;
+  right: 2.625rem;
+  width: 1.5rem;
+  height: 1.5rem;
   margin: 5px;
   padding: 0;
   transition: 0.2s border-color;
@@ -12,14 +11,16 @@
   border: 2px solid #ccc;
   border-radius: 20px;
   background: url(../icons/translate.svg) #fff center no-repeat;
-  background-size: 20px 20px;
-  box-sizing: border-box;
+  background-size: 16px 16px;
   text-shadow: none;
+  box-sizing: border-box;
 }
-.media-library-translate__link:hover {
-  color: transparent;
+
+.media-library-translate__link:hover{
+   color: transparent;
 }
+
 /* Hide media library edit modal backdrop if wrapped inside .ui-dialog */
-.ui-dialog .media-library-translate__link::before {
-  display: none;
+.ui-dialog .media-library-translate__link::before{
+  display:none;
 }
