--- a/web/themes/custom/fasu_theme/src/scss/style.scss
+++ b/web/themes/custom/fasu_theme/src/scss/style.scss
@@ -184,3 +184,13 @@
     }
   }
 }
+
+.field--type-datetime {
+  margin-bottom: 14px;
+}
+
+header#page-title {
+  @media (max-width: 768px) {
+    padding-bottom: 42px;
+  }
+}
